# IC

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imageBright  imageCopy  imageCopy.cpp
IC_project2/IC-update/bitstream/: BitStream.hpp
IC_project2/IC-update/codecAudio/: Golomb.cpp  Golomb.hpp  codecAudio.cpp  codecAudioTest.cpp
IC_project2/IC-update/golomb/: testGolomb  testGolomb.cpp
IC_project2/src/codecAudio/: codecAudio.cpp  codecAudio.hpp
IC_project2/src/golomb/: Golomb.cpp  Golomb.hpp
Project2/: README.md
Project2/src/: CMakeLists.txt
Project2/src/bitstream/: BitStream.cpp
Project2/src/codecAudio/: codecAudio.cpp  codecAudio.hpp  codecAudioTest.cpp
Project2/src/imageCode/: imageBright.cpp
Project3/: Makefile  README.md
Project3/SampleTexts/: LusiadasPT.txt  LusiadasPT3kModel.txt  akumaJPN3kModel.txt  alaskaIS3kModel.txt  domQuijoteESP3kModel.txt  dummyENG.txt  dummyENG3kModel.txt  frankreichGER3kModel.txt  hellmanninFI3kModel.txt  horeCZ3kModel.txt  jennyNOR3kModel.txt  panthereFR3kModel.txt  sherlockHolmes3kModelENG.txt
Project3/models/: dummy3kModel.txt
Project3/src/: fcm.cpp  fcm.hpp  findlang.cpp  fla  la  lang.cpp
Project3/test/: Makefile  fileFinding.cpp  testFcm.cpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageBright.cpp  imageRotate.cpp
src/golomb/: Golomb.cpp  Golomb.hpp
src/goulomb/: BitStream.hpp
src/imageCode/: imageMirror.cpp  imageNeg.cpp
